# overboot

./: .drone.yml  CMakeLists.txt  README.md
cmake/include/: build-number.cmake  cpack-deb.cmake  increment-build-number.cmake
debian/: changelog  control  copyright  overboot-obctl.cmake-components  overboot-obinit.cmake-components  overboot-obinit.postinst  overboot-obinit.postrm  rules
debian/source/: options
docker/: Dockerfile-focal  Dockerfile-jammy  entrypoint.sh
obinit/: CMakeLists.txt  LICENSE.txt
obinit/apps/obinit/: CMakeLists.txt  main.c
obinit/apps/obinit/deb/: postinst  postrm
obinit/apps/obinit/src/: ObArgParser.c  ObArgParser.h  Version.h.in  main.c  version.h.in
obinit/apps/obinit/system/usr/share/initramfs-tools/scripts/local-bottom/: obinit
obinit/apps/obinit/system/usr/share/overboot/: overboot.default.yaml  overboot.yaml.default
obinit/debian/: changelog  control  rules
obinit/docker/: Dockerfile-focal  Dockerfile-jammy  entrypoint.sh
obinit/lib/: CMakeLists.txt
obinit/lib/include/ob/: ObConfig.h  ObContext.h  ObDefs.h  ObHash.h  ObInit.h  ObInitTasks.h  ObJobs.h  ObLogging.h  ObYamlConfigReader.h
obinit/lib/src/: ObBlkid.c  ObBlkid.h  ObConfig.c  ObContext.c  ObDeinit.c  ObDeinit.h  ObFstab.c  ObFstab.h  ObInit.c  ObInitTasks.c  ObJobs.c  ObLayerCollector.c  ObLayerCollector.h  ObLayerInfo.h  ObLogging.c  ObMount.c  ObMount.h  ObOsUtils.c  ObOsUtils.h  ObPaths.c  ObPaths.h  ObTaskList.c  ObTaskList.h  ObXxHash.c  ObYamlConfigReader.c  ObYamlLayerReader.c  ObYamlLayerReader.h  ObYamlParser.c  ObYamlParser.h
obinit/libobinit/: CMakeLists.txt
obinit/libobinit/include/ob/: ObConfig.h  ObContext.h  ObDefs.h  ObDeinit.h  ObHash.h  ObInit.h  ObInitTasks.h  ObJobs.h  ObLayerInfo.h  ObLogging.h  ObMount.h  ObOsUtils.h  ObYamlConfigReader.h  ObYamlLayerReader.h
obinit/libobinit/src/: ObBlkid.c  ObBlkid.h  ObConfig.c  ObContext.c  ObDeinit.c  ObFstab.c  ObFstab.h  ObInit.c  ObInitTasks.c  ObJobs.c  ObLayerCollector.c  ObLogging.c  ObMount.c  ObMount.h  ObOsUtils.c  ObOsUtils.h  ObPaths.c  ObPaths.h  ObTaskList.c  ObTaskList.h  ObXxHash.c  ObYamlConfigReader.c  ObYamlLayerReader.c  ObYamlLayerReader.h  ObYamlParser.c  obLayerCollector.c  obLayerCollector.h
obinit/src/: CMakeLists.txt  ObArgParser.c  ObArgParser.h  ObYamlConfigReader.c  ObYamlConfigReader.h  ObYamlParser.c  ObYamlParser.h  main.c
obinit/system/etc/: overboot.yaml
obinit/system/usr/share/initramfs-tools/scripts/local-bottom/: obinit
obinit/tests/configs/: overboot-config-dir.yaml  overboot-disabled.yaml  overboot-durables-all.yaml  overboot-embedded-img-persistent.yaml  overboot-embedded-img-tmpfs.yaml  overboot-embedded-persistent.yaml  overboot-include.yaml  overboot-layers-alt-root.yaml  overboot-layers-dir.yaml  overboot-layers-img.yaml  overboot-layers-loop.yaml  overboot-layers-nohead.yaml  overboot-layers-sdb.yaml  overboot-layers-uuid.yaml  overboot-layers-wrong-head.yaml  overboot-local-repo.yaml  overboot-persistent.yaml  overboot-rollback.yaml  overboot-safe-mode.yaml  overboot-tmpfs-altroot.yaml  overboot-tmpfs-nohead.yaml  overboot-tmpfs-sdb.yaml  overboot-tmpfs-upper.yaml  overboot-tmpfs.yaml  overboot-upper-persistent.yaml  overboot-upper-tmpfs-include.yaml  overboot-upper-tmpfs.yaml  overboot-upper-volatile.yaml  overboot-uuid.yaml  overboot-volatile.yaml  overboot-wrong-head.yaml
obinit/tests/configs/overboot.d/: 99-durable-dir-2.yaml
obinit/tests/configs/test-overboot.d/: 00-main.yaml  01-head-layer.yaml  99-durable-dir-1.yaml
obinit/tests/functional/: README  helpers.bash  obinit.bats
obinit/tests/functional/res/: fstab-parsed  mtab
obinit/tests/functional/res/configs/: overboot-persistent.yaml  overboot-tmpfs.yaml
obinit/tests/functional/res/layers/20190202-1-first-test-layer.obld/: layer.yaml
obinit/tests/functional/res/layers/20190202-1-first-test-layer.obld/root/test/: file1  file2
obinit/tests/functional/res/layers/20190330-1-second-test-layer.obld/: layer.yaml
obinit/tests/functional/res/layers/20190330-1-second-test-layer.obld/root/etc/: layer.yaml
obinit/tests/functional/res/layers/20190330-1-second-test-layer.obld/root/etc/profile.d/: 98-greeting.sh
obinit/tests/functional/res/layers/20190330-1-second-test-layer.obld/root/test/: file2
obinit/tests/functional/res/layers/20190330-2-third-test-layer.obld/: layer.yaml
obinit/tests/functional/res/layers/20190330-2-third-test-layer.obld/root/etc/: layer.yaml
obinit/tests/functional/res/layers/20190330-2-third-test-layer.obld/root/test/: file3
obinit/tests/functional/res/layers/alt-root.obld/root/etc/: fstab  layer.yaml
obinit/tests/functional/res/layers/alt-root.obld/root/etc/profile.d/: 98-greeting.sh  99-20190330-2-third-test-layer.sh
obinit/tests/functional/res/layers/alt-root.obld/root/test/: file4
obinit/tests/functional/res/layers/first-test-layer.obld/root/etc/: layer.yaml
obinit/tests/functional/res/layers/first-test-layer.obld/root/etc/profile.d/: 98-greeting.sh  99-20190202-1-first-test-layer.sh
obinit/tests/functional/res/layers/second-test-layer.obld/root/etc/: layer.yaml
obinit/tests/functional/res/layers/second-test-layer.obld/root/etc/profile.d/: 99-20190202-1-second-test-layer.sh
obinit/tests/functional/res/layers/third-test-layer.obld/root/etc/: layer.yaml
obinit/tests/integration/: CMakeLists.txt  ObInit.test.c  ObInit.test.c.autosave  ObInit.test_Runner.c  ObMount.test.c  ObMount.test_Runner.c  ObSync.test.c  ObSync.test_Runner.c  ObTestHelpers.c  ObTestHelpers.h  README
obinit/tests/integration/test_root/dev/: test_device.img
obinit/tests/integration/test_root/etc/: overboot.yaml
obinit/tests/scripts/: debug-setup.sh  helpers.bash  qemu-debian-helper  qemu-run-obinit.sh  run-bats.sh
obinit/tests/unit/: CMakeLists.txt  TaskList.test.c  TaskList.test_Runner.c
